  * On removal check Depends and Pre-Depends for packages in unpacked and
    half-configured states too.
  * Add support for new hardening build flag stackprotectorstrong in Debian
    and derivatives, enabled by default. It will fallback to stackprotector
    when the former is not functional or disabled by the user.
    Thanks to Romain Francoise <rfrancoise@debian.org>.

  [ Updated programs translations ]
  * Danish (Joe Dalton). Closes: #754127
  * Portuguese (Miguel Figueiredo). Closes: #756920
  * Spanish (Guillem Jover): Fix «dpkg-query -l» header. Closes: #756209
  * Swedish (Peter Krefting).
  * French (Jean-Baka Domelevo Entfellner, Julien Patriarca).

  [ Updated scripts translations ]
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Thu, 05 Jun 2014 20:49:17 +0200

dpkg (1.17.10) unstable; urgency=medium

  [ Guillem Jover ]
  * Use libtool to build the static libraries, which makes it possible to
    embed libcompat inside libdpkg, as required by some external programs
    linking against the latter. Closes: #746122
  * Fix word wrapping logic in dselect. Regression introduced in dpkg 1.17.3.
  * Fix possible out of bounds buffer read access in the error output on
    bogus ar member sizes.
  * Fix memory leaks in buffer_copy() on error conditions.
  * Test suite:
    - Improve C code coverage.
    - Add template test cases for most perl modules.
    - Add test cases for Dpkg::Deps OR relationships.
    - Add minimal test case for Dpkg::Source::Quilt.
    - Add test cases for Dpkg::Source::Patch CVE-2014-0471 and CVE-2014-3127.
    - Add test case for patch disabling hunks; not security sensitive.
  * Fix non-security sensitive TOCTOU race in triggers database loading.
  * Fix non-security sensitive TOCTOU race in update-alternative alternative
    database loading.
  * Fix non-security sensitive TOCTOU race in update-alternative rename code.