@@ -38,6 +38,9 @@ dpkg (1.17.11) UNRELEASED; urgency=low
     and derivatives, enabled by default. It will fallback to stackprotector
     when the former is not functional or disabled by the user.
     Thanks to Romain Francoise <rfrancoise@debian.org>.
+  * Change «dpkg-deb --field» code to use the libdpkg deb822 parser instead
+    of an ad-hoc one. This makes sure any field fixup and sanity check is
+    performed on the input, and gets reflected on the output.
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
